--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@
 
 steps:
 - name: gcr.io/cloud-builders/docker
-  id: 'cloudbuild-android'
+  id: 'android-builder'
   env:
     - 'BUILD=$BUILD_ID'
     - 'PROJECT=$PROJECT_ID'
@@ -20,8 +20,9 @@ steps:
     # By default these static values are being used, without the NDK (build-trigger configuration not required.
     # Note: When commenting these out, one has to run `./gradlew build` to fetch the components instead.
     # '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0 ndk;23.1.7779620',
+    '--build-arg', 'CLI_TOOLS_VERSION=10406996',
     '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0',
-    '--build-arg', 'GRADLE_WRAPPER_VERSION=8.2',
+    '--build-arg', 'GRADLE_VERSION=8.2',
 
     # enable cloudbuild network
     '--network', 'cloudbuild',
@@ -29,5 +30,5 @@ steps:
   ]
 
 images:
-- 'eu.gcr.io/$PROJECT_ID/cloudbuild-android:${SHORT_SHA}'
-- 'eu.gcr.io/$PROJECT_ID/cloudbuild-android:latest'
+- 'eu.gcr.io/$PROJECT_ID/android-builder:${SHORT_SHA}'
+- 'eu.gcr.io/$PROJECT_ID/android-builder:latest'
