--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,8 @@ steps:
     # These are used by Cloud Build variable substitutions (as shown in screenshot_01.png):
     # https://cloud.google.com/cloud-build/docs/configuring-builds/substitute-variable-values
     #'--build-arg', 'ANDROID_SDK_PACKAGES="${_ANDROID_SDK_PACKAGES"}',
-    #'--build-arg', 'GRADLE_WRAPPER_VERSION=${_GRADLE_WRAPPER_VERSION}',
+    #'--build-arg', 'CLI_TOOLS_VERSION="${_CLI_TOOLS_VERSION"}',
+    #'--build-arg', 'GRADLE_VERSION=${_GRADLE_VERSION}',
 
     # By default these static values are being used, without the NDK (build-trigger configuration not required.
     # Note: When commenting these out, one has to run `./gradlew build` to fetch the components instead.
