--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,9 +21,9 @@ steps:
     # By default these static values are being used, without the NDK (build-trigger configuration not required.
     # Note: When commenting these out, one has to run `./gradlew build` to fetch the components instead.
     # '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0 ndk;25.1.8937393',
-    '--build-arg', 'ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0',
-    '--build-arg', 'CLI_TOOLS_VERSION=10406996',
-    '--build-arg', 'GRADLE_VERSION=8.2',
+    '--build-arg', '_ANDROID_SDK_PACKAGES=platform-tools platforms;android-34 build-tools;34.0.0',
+    '--build-arg', '_CLI_TOOLS_VERSION=10406996',
+    '--build-arg', '_GRADLE_VERSION=8.2',
 
     # enable cloudbuild network
     '--network', 'cloudbuild',
