--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -86,10 +86,10 @@ base {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat_version"
+    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintlayout_version"
+    implementation "androidx.navigation:navigation-fragment:$androidx_nav_version"
+    implementation "androidx.navigation:navigation-ui:$androidx_nav_version"
 
     implementation "com.google.firebase:firebase-crashlytics:$firebase_crashlytics_version"
     // implementation "com.google.firebase:firebase-crashlytics-ndk:$firebase_crashlytics_version"
@@ -130,18 +130,22 @@ if (project.file('google-services.json').exists()) {
 }
 
 /** Google Cloud KMS */
-cloudKms {
+if (System.getenv('_CLOUD_KMS_KEY_PATH') == null) {
+    logger.error('> Variable _CLOUD_KMS_KEY_PATH not set.')
+} else {
+    cloudKms {
 
-    // The leading underscore is required due to the CloudBuild environment.
-    kmsKeyPath = System.getenv('_CLOUD_KMS_KEY_PATH')
+        // The leading underscore is required due to the CloudBuild environment.
+        kmsKeyPath = System.getenv('_CLOUD_KMS_KEY_PATH')
 
-    plaintextFiles = [
-            /* 0 */ System.getProperty("user.home") + File.separator + ".android" + File.separator + "debug.keystore",
-            /* 1 */ System.getProperty("user.home") + File.separator + ".android" + File.separator + "release.keystore"
-    ]
+        plaintextFiles = [
+                /* 0 */ System.getProperty("user.home") + File.separator + ".android" + File.separator + "debug.keystore",
+                /* 1 */ System.getProperty("user.home") + File.separator + ".android" + File.separator + "release.keystore"
+        ]
 
-    ciphertextFiles = [
-            /* 0 */ getRootDir().absolutePath + File.separator + 'credentials/debug.keystore.enc',
-            /* 1 */ getRootDir().absolutePath + File.separator + 'credentials/release.keystore.enc'
-    ]
+        ciphertextFiles = [
+                /* 0 */ getRootDir().absolutePath + File.separator + 'credentials/debug.keystore.enc',
+                /* 1 */ getRootDir().absolutePath + File.separator + 'credentials/release.keystore.enc'
+        ]
+    }
 }
