--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -105,25 +105,25 @@ dependencies {
 
     // Required for connected tests.
     // https://mvnrepository.com/artifact/androidx.test/monitor
-    debugImplementation "androidx.test:monitor:$test_monitor_version"
+    debugImplementation "androidx.test:monitor:$androidx_test_monitor_version"
 
     // https://mvnrepository.com/artifact/androidx.test.ext
-    androidTestImplementation "androidx.test.ext:junit:$test_junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_test_junit_version"
 
     // https://mvnrepository.com/artifact/androidx.test
     // https://developer.android.com/jetpack/androidx/releases/test
-    androidTestImplementation "androidx.test:core:$test_core_version"
-    androidTestImplementation "androidx.test:runner:$test_runner_version"
-    androidTestImplementation "androidx.test:rules:$test_rules_version"
+    androidTestImplementation "androidx.test:core:$androidx_test_core_version"
+    androidTestImplementation "androidx.test:runner:$androidx_test_runner_version"
+    androidTestImplementation "androidx.test:rules:$androidx_test_rules_version"
 
     // https://mvnrepository.com/artifact/androidx.test.espresso
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$androidx_test_espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$androidx_test_espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$androidx_test_espresso_version"
 
     // https://mvnrepository.com/artifact/androidx.test.uiautomator/uiautomator
-    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator_version"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$androidx_test_uiautomator_version"
 }
 
 /** Google Play Services */
