--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,17 @@
 
 buildscript {
     ext {
+        android_gradle_plugin_version = '8.1.2'
         kotlin_version = '1.9.0'
         junit_version = '4.13.2'
-        android_gradle_plugin_version = '8.1.2'
-        google_mobile_services_version = '4.3.15'
-        firebase_appdistribution_plugin_version = '4.0.0'
-        firebase_crashlytics_plugin_version = '2.9.5'
-        firebase_crashlytics_version = '18.4.3'
-        firebase_perf_plugin_version = '1.4.2'
-        firebase_perf_version = '20.4.1'
-        androidx_nav_version = '2.7.3'
+
+        firebase_crashlytics_version = '18.5.1'
+        firebase_perf_version = '20.5.0'
+
+        androidx_navigation_version = '2.7.4'
         androidx_appcompat_version = '1.6.1'
         androidx_constraintlayout_version = '2.1.4'
+
         androidx_test_junit_version = '1.1.5'
         androidx_test_core_version = '1.5.0'
         androidx_test_monitor_version = '1.6.1'
@@ -33,12 +32,12 @@ buildscript {
 
 plugins {
     id 'com.android.application' version "$android_gradle_plugin_version" apply false
-    id 'com.android.library' version "$android_gradle_plugin_version" apply false
-    id 'androidx.navigation.safeargs' version "$androidx_nav_version" apply false
-    id 'com.google.gms.google-services' version "$google_mobile_services_version" apply false
-    id 'com.google.firebase.appdistribution' version "$firebase_appdistribution_plugin_version" apply false
-    id 'com.google.firebase.crashlytics' version "$firebase_crashlytics_plugin_version" apply false
-    id 'com.google.firebase.firebase-perf' version "$firebase_perf_plugin_version" apply false
+    // id 'com.android.library' version "$android_gradle_plugin_version" apply false
+    id 'androidx.navigation.safeargs' version "$androidx_navigation_version" apply false
+    id 'com.google.gms.google-services' version "4.3.15" apply false
+    id 'com.google.firebase.appdistribution' version "4.0.0" apply false
+    id 'com.google.firebase.firebase-perf' version "1.4.2" apply false
+    id 'com.google.firebase.crashlytics' version "2.9.5" apply false
 }
 
 // Keystore Settings, loaded from keystore.properties
