--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     ext {
-        android_gradle_plugin_version = '8.1.2'
-        kotlin_version = '1.9.0'
+        android_gradle_plugin_version = '8.2.0'
+        kotlin_version = '1.9.21'
         junit_version = '4.13.2'
 
-        firebase_crashlytics_version = '18.5.1'
-        firebase_perf_version = '20.5.0'
+        firebase_crashlytics_version = '18.6.0'
+        firebase_perf_version = '20.5.1'
 
         androidx_appcompat_version = '1.6.1'
         androidx_constraintlayout_version = '2.1.4'
@@ -89,6 +89,6 @@ tasks.register('clean', Delete) {
     }
 
     // delete build directories
-    delete rootProject.buildDir
-    delete project.buildDir
+    delete rootProject.fileTree('build')
+    delete project.fileTree('build')
 }
