--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
 # project-wide Gradle Settings
 # @see https://docs.gradle.org/current/userguide/build_environment.html
-systemProp.org.gradle.internal.launcher.welcomeMessageEnabled=false
-
 org.gradle.jvmargs=-Xmx2048M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.welcome=never
 org.gradle.parallel=true
 org.gradle.workers.max=6
 # org.gradle.debug=true
 
 android.useAndroidX=true
-android.suppressUnsupportedCompileSdk=34
-android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
