--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,23 @@
 // project-wide `build.gradle`
 
 buildscript {
-    ext {
-        android_gradle_plugin_version = '8.2.2'
-        kotlin_version = '1.9.21'
-        junit_version = '4.13.2'
-
-        firebase_crashlytics_version = '18.6.2'
-        firebase_perf_version = '20.5.2'
-
-        androidx_appcompat_version = '1.6.1'
-        androidx_constraintlayout_version = '2.1.4'
-        androidx_navigation_version = '2.7.7'
-        
-        androidx_test_junit_version = '1.1.5'
-        androidx_test_core_version = '1.5.0'
-        androidx_test_monitor_version = '1.6.1'
-        androidx_test_runner_version = '1.5.2'
-        androidx_test_rules_version = '1.5.0'
-        androidx_test_espresso_version = '3.5.1'
-        androidx_test_uiautomator_version = '2.2.0'
-    }
-
     // conditional remote dependency, when directory `buildSrc` is absent.
     if (! new File(getRootDir().absolutePath + "/buildSrc").exists()) {
         dependencies {
+            //noinspection UseTomlInstead
             classpath 'io.syslogic:google-cloud-kms-gradle-plugin:1.0.8'
         }
     }
 }
 
 plugins {
-    id 'com.android.application' version "$android_gradle_plugin_version" apply false
-    // id 'com.android.library' version "$android_gradle_plugin_version" apply false
-    id 'androidx.navigation.safeargs' version "$androidx_navigation_version" apply false
-    id 'com.google.gms.google-services' version "4.4.0" apply false
-    id 'com.google.firebase.appdistribution' version "4.0.1" apply false
-    id 'com.google.firebase.firebase-perf' version "1.4.2" apply false
-    id 'com.google.firebase.crashlytics' version "2.9.9" apply false
+    alias(libs.plugins.android.application) apply false
+    // alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.androidx.navigation.safeargs) apply false
+    alias(libs.plugins.google.mobile.services) apply false
+    alias(libs.plugins.firebase.appdistribution) apply false
+    alias(libs.plugins.firebase.crashlytics) apply false
+    alias(libs.plugins.firebase.perf) apply false
 }
 
 // Keystore Settings, loaded from keystore.properties
@@ -61,9 +41,7 @@ allprojects {
             def requested = details.requested
             if (requested.group == 'org.jetbrains.kotlin') {
                 List<String> list = ['kotlin-stdlib', 'kotlin-stdlib-jdk7', 'kotlin-stdlib-jdk8', 'kotlin-stdlib-common']
-                if (list.contains(requested.name)) {
-                    details.useVersion "$kotlin_version"
-                }
+                if (list.contains(requested.name)) { details.useVersion libs.versions.kotlin.get() }
             }
         }
     }
