--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -118,7 +118,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/androidx.test.espresso
     androidTestImplementation libs.androidx.test.espresso.core
-    androidTestImplementation libs.androidx.test.espresso.idling.resource
+    androidTestImplementation libs.androidx.test.espresso.idling.res
     androidTestImplementation libs.androidx.test.espresso.contrib
     androidTestImplementation libs.androidx.test.espresso.intents
     androidTestImplementation libs.androidx.test.espresso.web
