--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,5 @@ org.gradle.workers.max=6
 android.useAndroidX=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+
+android.suppressUnsupportedCompileSdk=35
