--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: ['master']
 
 env:
-  IMAGE_NAME: android-builder
+  IMAGE_NAME: ${{ github.repository }}
   REGISTRY: ghcr.io
 
 jobs:
