--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -13,18 +13,17 @@ if (new File(getRootDir().absolutePath + "/buildSrc").exists() || project.plugin
 }
 
 android {
-    namespace = 'io.syslogic.cloudbuild'
-    buildToolsVersion = '35.0.0'
+    namespace = "io.syslogic.cloudbuild"
+    buildToolsVersion = "36.0.0"
     defaultConfig {
-        applicationId = 'io.syslogic.cloudbuild'
+        applicationId = "io.syslogic.cloudbuild"
         minSdk = 22
-        compileSdk = 35
-        targetSdk = 35
+        compileSdk = 36
+        targetSdk = 36
         versionCode = 2
         versionName = "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testBuildType = "debug"
-        multiDexEnabled = true
     }
 
     compileOptions {
@@ -56,11 +55,13 @@ android {
         buildTypes {
 
             debug {
-                signingConfig signingConfigs.debug
+                signingConfig = signingConfigs.debug
+                multiDexEnabled = true
             }
 
             release {
-                signingConfig signingConfigs.release
+                signingConfig = signingConfigs.release
+                multiDexEnabled = true
 
                 firebaseAppDistribution {
                     serviceCredentialsFile = rootProject.file("credentials/google-service-account.json")
