--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 plugins {
     alias(libs.plugins.android.application) apply false
-    // alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.android.library) apply false
     alias(libs.plugins.androidx.navigation.safeargs) apply false
     alias(libs.plugins.google.mobile.services) apply false
     alias(libs.plugins.firebase.appdistribution) apply false
