--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,7 @@ import org.gradle.api.initialization.resolve.RepositoriesMode
 
 pluginManagement {
     repositories {
-        gradlePluginPortal()
-        maven { url = 'https://jitpack.io' }
+        maven { url = uri("https://jitpack.io") }
         google()
         mavenCentral()
     }
