--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
-android_gradle_plugin             = "8.11.0"
+android_gradle_plugin             = "8.11.1"
 google_mobile_services            = '4.4.3'
 firebase_appdistribution          = '5.1.1'
-firebase_crashlytics_plugin       = '3.0.4'
-firebase_perf_plugin              = '1.4.2'
+firebase_crashlytics_plugin       = '3.0.5'
+firebase_perf_plugin              = '2.0.0'
 
 kotlin                            = '2.2.0'
 junit                             = '4.13.2'
 androidx_appcompat                = '1.7.1'
 androidx_constraintlayout         = '2.2.1'
-androidx_navigation               = '2.9.1'
-androidx_test_junit               = '1.2.1'
-androidx_test_core                = '1.6.1'
-androidx_test_rules               = '1.6.1'
-androidx_test_runner              = '1.6.2'
-androidx_test_monitor             = '1.7.2'
-androidx_test_espresso            = '3.6.1'
+androidx_navigation               = '2.9.3'
+androidx_test_junit               = '1.3.0'
+androidx_test_core                = '1.7.0'
+androidx_test_rules               = '1.7.0'
+androidx_test_runner              = '1.7.0'
+androidx_test_monitor             = '1.8.0'
+androidx_test_espresso            = '3.7.0'
 androidx_test_uiautomator         = '2.3.0'
-firebase_crashlytics              = '19.4.4'
-firebase_perf                     = '21.0.5'
+firebase_crashlytics              = '20.0.0'
+firebase_perf                     = '22.0.0'
 
 [plugins]
 android_application               = { id = "com.android.application", version.ref = "android_gradle_plugin" }
-# android_library                 = { id = "com.android.library", version.ref = "android_gradle_plugin" }
+android_library                   = { id = "com.android.library", version.ref = "android_gradle_plugin" }
 androidx_navigation_safeargs      = { id = "androidx.navigation.safeargs", version.ref = "androidx_navigation" }
 google_mobile_services            = { id = "com.google.gms.google-services", version.ref = "google_mobile_services" }
 firebase_appdistribution          = { id = "com.google.firebase.appdistribution", version.ref = "firebase_appdistribution" }
