--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,16 @@
 [versions]
-android_gradle_plugin             = "8.12.0"
+android_gradle_plugin             = '8.13.0'
 google_mobile_services            = '4.4.3'
 firebase_appdistribution          = '5.1.1'
 firebase_crashlytics_plugin       = '3.0.6'
 firebase_perf_plugin              = '2.0.1'
 
-kotlin                            = '2.2.0'
+kotlin                            = '2.2.20'
 junit                             = '4.13.2'
+
 androidx_appcompat                = '1.7.1'
 androidx_constraintlayout         = '2.2.1'
-androidx_navigation               = '2.9.3'
+androidx_navigation               = '2.9.5'
 androidx_test_junit               = '1.3.0'
 androidx_test_core                = '1.7.0'
 androidx_test_rules               = '1.7.0'
@@ -17,8 +18,9 @@ androidx_test_runner              = '1.7.0'
 androidx_test_monitor             = '1.8.0'
 androidx_test_espresso            = '3.7.0'
 androidx_test_uiautomator         = '2.3.0'
-firebase_crashlytics              = '20.0.0'
-firebase_perf                     = '22.0.0'
+
+firebase_crashlytics              = '20.0.2'
+firebase_perf                     = '22.0.2'
 
 [plugins]
 android_application               = { id = "com.android.application", version.ref = "android_gradle_plugin" }
