--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
-android_gradle_plugin             = '8.13.0'
-google_mobile_services            = '4.4.4'
-firebase_appdistribution          = '5.1.1'
-firebase_crashlytics_plugin       = '3.0.6'
-firebase_perf_plugin              = '2.0.1'
+android_gradle_plugin             = "8.13.1"
+google_mobile_services            = "4.4.4"
+firebase_appdistribution          = "5.2.0"
+firebase_crashlytics_plugin       = "3.0.6"
+firebase_perf_plugin              = "2.0.2"
 
-kotlin                            = '2.2.21'
-junit                             = '4.13.2'
+kotlin                            = "2.2.21"
+junit                             = "4.13.2"
 
-androidx_appcompat                = '1.7.1'
-androidx_constraintlayout         = '2.2.1'
-androidx_navigation               = '2.9.5'
-androidx_test_junit               = '1.3.0'
-androidx_test_core                = '1.7.0'
-androidx_test_rules               = '1.7.0'
-androidx_test_runner              = '1.7.0'
-androidx_test_monitor             = '1.8.0'
-androidx_test_espresso            = '3.7.0'
-androidx_test_uiautomator         = '2.3.0'
+androidx_appcompat                = "1.7.1"
+androidx_constraintlayout         = "2.2.1"
+androidx_navigation               = "2.9.6"
+androidx_test_junit               = "1.3.0"
+androidx_test_core                = "1.7.0"
+androidx_test_rules               = "1.7.0"
+androidx_test_runner              = "1.7.0"
+androidx_test_monitor             = "1.8.0"
+androidx_test_espresso            = "3.7.0"
+androidx_test_uiautomator         = "2.3.0"
 
-firebase_crashlytics              = '20.0.3'
-firebase_perf                     = '22.0.2'
+firebase_crashlytics              = "20.0.3"
+firebase_perf                     = "22.0.4"
 
 [plugins]
 android_application               = { id = "com.android.application", version.ref = "android_gradle_plugin" }
