--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ allprojects {
             def requested = details.requested
             if (requested.group == 'org.jetbrains.kotlin') {
                 List<String> list = ['kotlin-stdlib', 'kotlin-stdlib-jdk7', 'kotlin-stdlib-jdk8', 'kotlin-stdlib-common']
-                if (list.contains(requested.name)) { details.useVersion libs.versions.kotlin.get() }
+                if (list.contains(requested.name)) { details.useVersion libs.versions.getKotlin().get() }
             }
         }
     }
