--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-android_gradle_plugin             = "8.13.1"
+#noinspection UnusedVersionCatalogEntry
+kotlin                            = "2.3.10"
+junit                             = "4.13.2"
+android_gradle_plugin             = "9.0.1"
 google_mobile_services            = "4.4.4"
-firebase_appdistribution          = "5.2.0"
+firebase_appdistribution          = "5.2.1"
 firebase_crashlytics_plugin       = "3.0.6"
 firebase_perf_plugin              = "2.0.2"
 
-kotlin                            = "2.2.21"
-junit                             = "4.13.2"
-
 androidx_appcompat                = "1.7.1"
 androidx_constraintlayout         = "2.2.1"
-androidx_navigation               = "2.9.6"
+androidx_navigation               = "2.9.7"
 androidx_test_junit               = "1.3.0"
 androidx_test_core                = "1.7.0"
 androidx_test_rules               = "1.7.0"
@@ -19,7 +19,7 @@ androidx_test_monitor             = "1.8.0"
 androidx_test_espresso            = "3.7.0"
 androidx_test_uiautomator         = "2.3.0"
 
-firebase_crashlytics              = "20.0.3"
+firebase_crashlytics              = "20.0.4"
 firebase_perf                     = "22.0.4"
 
 [plugins]
@@ -36,6 +36,7 @@ androidx_appcompat                = { module = "androidx.appcompat:appcompat", v
 androidx_constraintlayout         = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidx_constraintlayout" }
 androidx_navigation_fragment      = { module = "androidx.navigation:navigation-fragment", version.ref = "androidx_navigation" }
 androidx_navigation_ui            = { module = "androidx.navigation:navigation-ui", version.ref = "androidx_navigation" }
+
 firebase_crashlytics              = { module = "com.google.firebase:firebase-crashlytics", version.ref = "firebase_crashlytics" }
 # firebase_crashlytics_ndk        = { module = "com.google.firebase:firebase-crashlytics-ndk", version.ref = "firebase_crashlytics" }
 firebase_perf                     = { module = "com.google.firebase:firebase-perf", version.ref = "firebase_perf" }
@@ -47,8 +48,15 @@ androidx_test_core                = { module = "androidx.test:core", version.ref
 androidx_test_rules               = { module = "androidx.test:rules", version.ref = "androidx_test_rules" }
 androidx_test_runner              = { module = "androidx.test:runner", version.ref = "androidx_test_runner" }
 androidx_test_uiautomator         = { module = "androidx.test.uiautomator:uiautomator", version.ref = "androidx_test_uiautomator" }
+
 androidx_test_espresso_core       = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx_test_espresso" }
 androidx_test_espresso_web        = { module = "androidx.test.espresso:espresso-web", version.ref = "androidx_test_espresso" }
 androidx_test_espresso_contrib    = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidx_test_espresso" }
 androidx_test_espresso_intents    = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidx_test_espresso" }
 androidx_test_espresso_idling_res = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "androidx_test_espresso" }
+
+[bundles]
+androidx_libs                     = [ "androidx_appcompat", "androidx_constraintlayout", "androidx_navigation_fragment", "androidx_navigation_ui" ]
+androidx_test_libs                = [ "androidx_test_junit", "androidx_test_core", "androidx_test_rules", "androidx_test_runner", "androidx_test_uiautomator" ]
+androidx_test_espresso            = [ "androidx_test_espresso_core", "androidx_test_espresso_web", "androidx_test_espresso_contrib", "androidx_test_espresso_intents", "androidx_test_espresso_idling_res" ]
+firebase_libs                     = [ "firebase_crashlytics", "firebase_perf" ]
