--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,12 @@ pluginManagement {
         maven { url = uri("https://jitpack.io") }
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
+}
+
+plugins {
+    id "org.gradle.toolchains.foojay-resolver-convention" version "1.0.0"
 }
 
 dependencyResolutionManagement {
